Revert "Merge pull request #1 from nth-linguist/Oranges"
This reverts commit 7d320debb43647f2874a13228aeb6ab3b0fb65da, reversing
changes made to ac499f8c928862a50b4931ed46ecad84182c58a1.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
     <header>
         <div id="hero">
             <div class="hero-text">
-                <h1>We now sell Oranges!</h1>
-                <h2>banana dolphins sold out.</h2>
+                <h1>Some text</h1>
+                <h2>Some more text</h2>
             </div>
-            <img src="https://purepng.com/public/uploads/large/purepng.com-orange-orangesorangefruitbitter-orangeorangesclip-art-1701527336951ldrwe.png" alt="Some bananas">
+            <img src="/images/Banana-PNG-Picture.png" alt="Some bananas">
             <div class="background"></div>
         </div>
     </header>
@@ -23,7 +23,7 @@
         <div class="flex-container">
             <div class="card">
                 <h3>Some text</h3>
-                <img src="https://cdn.pixabay.com/photo/2016/02/23/17/42/orange-1218158_1280.png" alt="Some image">
+                <img src="/images/Banana-PNG-HD.png" alt="Some image">
                 <div class="card-bottom">
                     <a href="#">Shop now</a>
                     <div class="social-icons">
@@ -41,7 +41,7 @@
             </div>
             <div class="card">
                 <h3>Some text</h3>
-                <img src="https://static.vecteezy.com/system/resources/previews/012/986/922/original/twisted-orange-peel-paths-free-png.png" alt="Some image">
+                <img src="/images/148-1484858_bananas-transparent-aesthetic-banana-collage.png" alt="Some image">
                 <div class="card-bottom">
                     <a href="#">Shop now</a>
                     <div class="social-icons">
@@ -59,7 +59,7 @@
             </div>
             <div class="card">
                 <h3>Some text</h3>
-                <img src="https://www.models-resource.com/resources/big_icons/36/35113.png?updated=1586011345" alt="Some image">
+                <img src="/images/Banana-Transparent.png" alt="Some image">
                 <div class="card-bottom">
                     <a href="#">Shop now</a>
                     <div class="social-icons">
@@ -77,7 +77,7 @@
             </div>
             <div class="card">
                 <h3>Some text</h3>
-                <img src="https://i.pinimg.com/originals/23/c1/cd/23c1cd29a57de84c904d61b3f876f721.png" alt="Some image">
+                <img src="/images/Banana.png" alt="Some image">
                 <div class="card-bottom">
                     <a href="#">Shop now</a>
                     <div class="social-icons">
@@ -95,7 +95,7 @@
             </div>
             <div class="card">
                 <h3>Some text</h3>
-                <img src="https://cdn.pixabay.com/photo/2016/02/23/17/42/orange-1218158_1280.png" alt="Some image">
+                <img src="/images/Banana-PNG-HD.png" alt="Some image">
                 <div class="card-bottom">
                     <a href="#">Shop now</a>
                     <div class="social-icons">
@@ -113,7 +113,7 @@
             </div>
             <div class="card">
                 <h3>Some text</h3>
-                <img src="https://static.vecteezy.com/system/resources/previews/012/986/922/original/twisted-orange-peel-paths-free-png.png" alt="Some image">
+                <img src="/images/148-1484858_bananas-transparent-aesthetic-banana-collage.png" alt="Some image">
                 <div class="card-bottom">
                     <a href="#">Shop now</a>
                     <div class="social-icons">
@@ -131,7 +131,7 @@
             </div>
             <div class="card">
                 <h3>Some text</h3>
-                <img src="https://i.pinimg.com/originals/23/c1/cd/23c1cd29a57de84c904d61b3f876f721.png" alt="Some image">
+                <img src="/images/Banana-Transparent.png" alt="Some image">
                 <div class="card-bottom">
                     <a href="#">Shop now</a>
                     <div class="social-icons">
@@ -149,7 +149,7 @@
             </div>
             <div class="card">
                 <h3>Some text</h3>
-                <img src="https://pngimg.com/uploads/goldfish/goldfish_PNG32.png" alt="Some image">
+                <img src="/images/Banana.png" alt="Some image">
                 <div class="card-bottom">
                     <a href="#">Shop now</a>
                     <div class="social-icons">
@@ -168,4 +168,4 @@
         </div>
     </section>
 </body>
-</html>fronte
+</html>
